--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,14 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/Black</item>
     </style>
+    <style name="Divider_Blue">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/Crayolas_blue</item>
+    </style>
+    <style name="Divider_Purple">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
 </resources>
