Added color to theme. Added toolbar and added total sum for items

--- a/app/src/main/res/layout/additem.xml
+++ b/app/src/main/res/layout/additem.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
 
 
-    android:background="@drawable/cardview"
+    android:background="@drawable/cardview_shadow_colored_gradient"
     android:layout_height="wrap_content">
 
     <LinearLayout
