--- a/app/src/main/res/layout/item_format.xml
+++ b/app/src/main/res/layout/item_format.xml
@@ -4,17 +4,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_margin="10dp"
 
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp"
 
     android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
-        android:padding="20dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+
         android:layout_height="match_parent"
-        android:background="@drawable/cardview_shadow_colored"
+
         android:weightSum="4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
@@ -28,7 +31,7 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
 
-            android:gravity="center"
+
 
             android:text="Item Name"
             />
@@ -54,4 +57,14 @@
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="@string/add"
         android:src="@drawable/ic_delete_black_24dp"/>
+
+    <View
+        style="@style/Divider"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
