--- a/app/src/main/res/drawable/cardview_shadow_colored.xml
+++ b/app/src/main/res/drawable/cardview_shadow_colored.xml
@@ -16,13 +16,13 @@
 
         </shape>
     </item>
-    <item    android:bottom="6dp"  android:right="6dp" >
+    <item      android:right="6dp" >
         <shape
             android:shape="rectangle">
             <solid android:color="@color/white"/>
             <stroke android:color="@color/colorPrimary"
                 android:width="0.5dp"/>
-            <corners android:radius="14dp" />
+            <corners android:topRightRadius="14dp" android:topLeftRadius="14dp" />
 
         </shape>
     </item>
