--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,18 +62,33 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ItemList"
+    <LinearLayout
+        android:id="@id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="20dp"
-
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/cardview_shadow_colored"
         app:layout_constraintBottom_toTopOf="@+id/expenseNavBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ExtendedLookup_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/ExtendedLookup_toolbar">
 
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/ItemList"
+            android:layout_width="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+
+            app:layout_constraintBottom_toTopOf="@+id/expenseNavBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+    </LinearLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/expenseNavBar"
         android:layout_width="match_parent"
@@ -96,7 +111,7 @@
         android:backgroundTint="@color/colorPrimary"
         android:contentDescription="@string/add"
         android:src="@drawable/ic_add_black_24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/ItemList"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -105,9 +120,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="20dp"
+        android:visibility="gone"
         android:backgroundTint="@color/colorPrimary"
         android:contentDescription="@string/delete"
         android:src="@drawable/ic_delete_black_24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/ItemList"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
