--- a/app/src/main/res/drawable/cardview_shadow_colored_gradient.xml
+++ b/app/src/main/res/drawable/cardview_shadow_colored_gradient.xml
@@ -4,19 +4,19 @@
 
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:left="6dp" android:top="6dp">
+    <item >
         <shape android:shape="rectangle">
 
             <gradient
                 android:startColor="@color/colorPrimary"
                 android:endColor="@color/Pink"
-                android:angle="270"/>
+                />
 
             <corners android:radius="14dp" />
 
         </shape>
     </item>
-    <item    android:bottom="6dp"  android:right="6dp" >
+    <item    android:bottom="2dp"  android:right="2dp" android:top="2dp" android:left="2dp">
         <shape
             android:shape="rectangle">
             <solid android:color="@color/white"/>
