--- a/app/src/main/res/layout/additem.xml
+++ b/app/src/main/res/layout/additem.xml
@@ -67,6 +67,8 @@
             style="@style/Divider_Purple"
             android:layout_width="match_parent"
             android:layout_height="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginLeft="2dp"
             android:layout_marginTop="10dp" />
 
         <Button
