--- a/app/src/main/res/menu/expense_navitems.xml
+++ b/app/src/main/res/menu/expense_navitems.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/CurrentItems"
         android:title="@string/current"
-        android:icon="@drawable/ic_today_black_24dp" />
+        android:icon="@drawable/ic_today_black_24dp"
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/HistoricalItems"
         android:title="@string/previous"
-        android:icon="@drawable/ic_history_black_24dp" />
+        android:icon="@drawable/ic_history_black_24dp"
+        app:showAsAction="ifRoom"/>
 
 </menu>
