--- a/app/src/main/res/layout/item_format.xml
+++ b/app/src/main/res/layout/item_format.xml
@@ -10,6 +10,19 @@
 
     android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/itemDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="22/11/2019"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
