--- a/app/src/main/res/layout/item_format.xml
+++ b/app/src/main/res/layout/item_format.xml
@@ -4,80 +4,93 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-
-    android:paddingTop="20dp"
-    android:paddingBottom="20dp"
-
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/itemDate"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/itemDateLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="22/11/2019"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/itemDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="22/11/2019"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <View
+            style="@style/Divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
+        android:layout_width="match_parent"
 
-        android:layout_height="match_parent"
 
-        android:weightSum="4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
+        android:layout_height="wrap_content"
+        android:weightSum="10"
+
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/itemDateLayout">
 
 
         <TextView
             android:id="@+id/itemName"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="8"
+            android:gravity="center|start"
+            android:text="Item Name" />
 
-
-
-            android:text="Item Name"
-            />
         <TextView
             android:id="@+id/itemPrice"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="2"
 
             android:gravity="center"
             android:maxLines="1"
-            android:text="1000.0"
-             />
+            android:text="1000.0" />
+
+        <Button
+            android:id="@+id/deleteBtn"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_weight="1"
+            android:background="@drawable/ic_delete_forever_red_24dp" />
     </LinearLayout>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/deleteBtn"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        app:backgroundTint="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/add"
-        android:src="@drawable/ic_delete_black_24dp"/>
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/deleteBtn"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:backgroundTint="@color/colorPrimary"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        android:contentDescription="@string/add"-->
+<!--        app:srcCompat="@drawable/ic_delete_black_24dp"/>-->
 
     <View
+        android:id="@+id/view2"
         style="@style/Divider"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
 
-        android:layout_marginTop="10dp"
+
+        android:layout_height="0.5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
