--- a/app/src/main/res/layout/item_format.xml
+++ b/app/src/main/res/layout/item_format.xml
@@ -40,7 +40,7 @@
 
         android:layout_height="wrap_content"
         android:weightSum="10"
-
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/itemDateLayout">
@@ -90,7 +90,20 @@
 
 
         android:layout_height="0.5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/totalMoneyForDay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Total :  "
+        android:visibility="visible"
+        android:textColor="@color/white"
+        android:background="@drawable/total_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:padding = "5dp"
+        app:layout_constraintTop_toBottomOf="@+id/view2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
